fix: file name error

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="content">
-        email : dnwlgn0807@naver.com   
+        email : dnwlgn0807@naver.com<br>
         phone-number : 010-5207-7204
         </div>
     </body>
