--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="content">
-        Java / Spring / Postgresql
+        Java / Spring / Postgresql <br>
         Javascript / React
         </div>
     </body>
