--- a/experience.html
+++ b/experience.html
@@ -4,17 +4,25 @@
         <meta charset="UTF-8">
         <title> Ji-Hu's Practical Experience </title>
         <style>
-            #content {
+            h1 {
                 text-align: center;
+            }
+            table {
+                margin-left: auto;
+                margin-right: auto;
+            }
+            div {
+                text-align: center;
+                margin-bottom: 50px;
             }
         </style>
     </head>
     <body>
-        <table id="content">
+        <table style="border: 1px solid black;">
             <tr>
-              <th scope="col">기간</td>
-              <th scope="col">회사명</td>
-              <th scope="col">직무</td>
+              <th>기간</td>
+              <th>회사명</td>
+              <th>직무</td>
             </tr>
             <tr>
               <td>23.01 - 23.02</td>
